并发优化，MySQL存储过程来优化

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
       <artifactId>spring-test</artifactId>
       <version>4.1.1.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>seckill</finalName>
